--- a/diazotheme/bootstrap/static/css/theme.css
+++ b/diazotheme/bootstrap/static/css/theme.css
@@ -143,7 +143,7 @@ input[type="submit"], input[type="button"], button {
 }
 
 .mceToolbar, .mceStatusbar {
-    background: #ddd !important;
+    /* background: #ddd !important; */
 }
 
 .mceToolbar {
