--- a/diazotheme/bootstrap/static/css/unicorn.css
+++ b/diazotheme/bootstrap/static/css/unicorn.css
@@ -6,10 +6,20 @@
 .hero-responsive img {
 	width:100%;
 }
+@media screen and (min-width: 991px) {
+.carousel-banners.hero-banner-responsive, .carousel-banner.hero-responsive  {
+    height: 540px !important;
+}
 
 @media screen and (min-width: 768px){
-.jumbotron {
-    padding-top: 0px;
-	    padding-bottom: 48px;
+.row.jumbotron {
+	padding: 0 !important;
+	    margin: 0 !important;
+	    text-align: center;
+	    margin-top: 20px;
+	    background-color: transparent;
+	    position: absolute;
+	    z-index: -100;
+	    width: 100%;
 }
 }
